proto-animation small fix - add animation on Marker

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -11,7 +11,7 @@
   box-shadow: 0 1px 1px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   position: fixed;
   width: 100vw;
-  height: 10vh;
+  height: 8 vh;
   z-index: 999;
 
   i{
@@ -22,7 +22,7 @@
   }
 
   img { // LOGO
-    height: 7vh;
+    height: 6vh;
   }
 }
 
